--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/arjun1237/web-scraping#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.6",
     "express": "^4.17.1",
     "joi": "^17.4.0",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "request": "^2.88.2"
   }
 }
