--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "mongoose": "^5.12.3",
+    "nodemon": "^2.0.7",
     "request": "^2.88.2"
   }
 }
