--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/arjun1237/web-scraping#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.6",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "mongoose": "^5.12.3",
